# longma

./: .gitignore  README.md  pyproject.toml
chinese_cli/: __init__.py  __main__.py  advanced_modes.py  analytics.py  characters.py  cli.py  config.py  grammar.py  modes.py  plugins.py  pronunciation.py  srs.py  stats.py  vocab_data.py
